<resources>
    <string name="app_name">CityDriveApp</string>
    <!--<string name="google_maps_key">AIzaSyCxF7QvrPoF8-WaGpzapwPB8p1l7zKLe3E</string>-->
    <string name="google_maps_key">AIzaSyBajEOtjFqdv8QaIUXJNUsGcOXez6uWXcU</string>
    <string name="intro_first_title">Welcome to CityDrive</string>
    <string name="intro_second_title">Planning</string>
    <string name="intro_third_title">An assistant</string>
    <string name="intro_first_desc">The application for monitoring the city\'s transport network.</string>
    <string name="intro_second_desc">Planning trips around the city</string>
    <string name="intro_third_desc">An assistant when moving around the city using public transport.</string>
    <string name="login_username_hint">Username</string>
    <string name="login_pass_hint">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="login_continue">Continue</string>
    <string name="registration_email">Email</string>
    <string name="login_connect">Connect</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="who_are_you">Who are you?</string>
    <string name="driver">I\'m a Driver</string>
    <string name="passenger">I\'m a Passenger</string>
    <string name="title_activity_maps">Map</string>
    <string name="main_map_btn">Map</string>
    <string name="are_you_here">You are here</string>
</resources>
