<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/registrationEditLay"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/registrationNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_fragment_edit_text_margin_top"
            android:layout_marginLeft="@dimen/login_fragment_edit_text_margin_lr"
            android:layout_marginRight="@dimen/login_fragment_edit_text_margin_lr"
            android:gravity="center_vertical"
            android:hint="@string/login_username_hint"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dip"
            />

        <EditText
            android:id="@+id/registrationEmailEdiText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_fragment_edit_text_margin_top"
            android:layout_marginLeft="@dimen/login_fragment_edit_text_margin_lr"
            android:layout_marginRight="@dimen/login_fragment_edit_text_margin_lr"
            android:gravity="center_vertical"
            android:inputType="textEmailAddress"
            android:hint="@string/registration_email"
            android:drawableLeft="@drawable/mail"
            android:drawablePadding="10dip"
            />

        <EditText
            android:id="@+id/registrationPassEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_fragment_edit_text_margin_top"
            android:layout_marginLeft="@dimen/login_fragment_edit_text_margin_lr"
            android:layout_marginRight="@dimen/login_fragment_edit_text_margin_lr"
            android:gravity="center_vertical"
            android:hint="@string/login_pass_hint"
            android:drawableLeft="@drawable/closed_lock"
            android:drawablePadding="10dip"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/registrationButtonsLay"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/registrationEditLay"
        android:gravity="bottom"
        android:layout_marginBottom="@dimen/login_fragment_button_lay_margin_bottom">

        <Button
            android:id="@+id/registrationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_fragment_edit_text_margin_lr"
            android:layout_marginRight="@dimen/login_fragment_edit_text_margin_lr"
            android:text="@string/login_connect"
            />

        <TextView
            android:id="@+id/loginForgotPassTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_fragment_forgot_margin_top"
            android:text="@string/terms_and_conditions"
            android:gravity="center"
            />

    </LinearLayout>


</RelativeLayout>