<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
               android:orientation="vertical"
    android:background="@color/justWhite">

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7"
        />

    <TextView
        android:id="@+id/whoAreYouAppNameTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="6"
        android:text="@string/app_name"
        style="@style/whoAreYouTextViewStyle"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/whoAreYouQuestionTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/who_are_you"
            style="@style/whoAreYouTextViewStyle"
            />

        <LinearLayout
            android:id="@+id/whoAreYouButtonsLay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="3"
            android:layout_margin="30dp"
            android:gravity="center"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="horizontal"
                >

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    />

                <Button
                    android:id="@+id/whoAreYouDriverButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/driver"
                    style="@style/whoAreYouButtonStyle"
                    />

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="horizontal">

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    />

                <Button
                    android:id="@+id/whoAreYouPassengerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/passenger"
                    style="@style/whoAreYouButtonStyle"
                    />

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    
</LinearLayout>